--- a/index.html
+++ b/index.html
@@ -1,25 +1,66 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="eco__1_-removebg-preview.png" type="image/x-icon">
-    <title>social desafio</title>
+    <title>fica comigo pra sempre, mari
+        por favorzinho?</title>
 </head>
-<body>
-    <h1>desafio do maldito guanabara</h1>
-    <h3>quem so eu</h3>
-    <img src="eco (1).png" alt="">
-    <p>eu sou <strong><abbr title="cria do RODO">cria</abbr></strong>. lorem so pra ter mais palavra Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ea accusamus sint, ex quae commodi facere quibusdam nobis atque consequatur saepe enim cumque nesciunt consequuntur adipisci earum voluptatibus laudantium ipsam. Nesciunt consectetur voluptates facere ea quis consequatur. Omnis incidunt eligendi magnam. Totam reprehenderit facere error quos ex. Vitae commodi eaque esse corrupti blanditiis, architecto nemo alias ipsum cum a possimus atque quasi harum excepturi voluptatibus nulla, sed non odit? In repudiandae, beatae harum doloremque ab fugit ea sequi illum nulla rem quae quaerat perspiciatis accusamus dicta ipsam. Fugiat quis, officiis, nihil, a maxime vitae assumenda iure non nostrum exercitationem ex!.</p>
-    <h2>como falar comigo</h2>
-    <ul>
-        <li><img src="icone-github.png" alt=""><a href="https://luarkcria.github.io/githubtest/">meu saite do github</a></li>
-        <li><img src="icone-instagram.png" alt=""> <a href="https://www.instagram.com/ramondinopro/">meu instagra</a></li>
-        <li><img src="icone-youtube.png" alt=""><a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ">youtube do meste</a></li>
-        
-    </ul>
 
-    <h3>vou conectar o proximo desafio nesse mesmo</h3>
-    <a href="desafio 6/pagdes2.html">próximo</a>
+<body>
+    <div id="conteudo">
+        <h2>aceita viver sua vida comigo?</h2>
+        <div style="margin: auto;width: 170px;">
+            <button style="position: fixed;display: block;" class="btn" onclick="sim()">SIM</button>
+            <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)" style="position: absolute;">NÃO</button>
+        </div>
+    </div>
 </body>
+<style>
+    #conteudo {
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        text-align: center;
+        font-family: sans-serif;
+    }
+
+    .btn {
+        background: rgb(233, 139, 220);
+        color: white;
+        border: none;
+        padding: 10px;
+        width: 80px;
+        border-radius: 5px;
+    }
+</style>
+
+<script>
+    function sim() {
+        alert("escolheu certo ok");
+        // redireciona para um URL após clicar no SIM
+        location.href = "https://www.tiktok.com/@nxmoradinhodamari/video/7410208335380729094";
+    }
+
+    function desvia(btn) {
+        // btn declarado na função
+        btn.style.position = 'absolute';
+        btn.style.bottom = geraPosicao(10, 90);
+        btn.style.left = geraPosicao(10, 90);
+        console.log('opa, desviei...');
+    }
+
+    function geraPosicao(min, max) {
+        return (Math.random() * (max - min) + min) + "%";
+    }
+
+</script>
+
 </html>
